--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 				"token": "YourDiscordBotToken",
-				"welcome_channel_id": "YourWelcomeChannelID"
-			 	"prefix": "YourPrefix"
+				"welcome_channel_id": "YourWelcomeChannelID",
+			 	"prefix": "YourPrefix",
 				"news_api_key": "NewsAPIKey"
 }
