Added unban and mute commands

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
 				"token": "YourDiscordBotToken",
 				"welcome_channel_id": "YourWelcomeChannelID",
 			 	"prefix": "YourPrefix",
-				"news_api_key": "NewsAPIKey"
+				"news_api_key": "NewsAPIKey",
 				"fixer_api_key": "FixerAPIKey"
 }
